tests/ui/coverage-attr/bad-attr-ice.feat.stderr
error: malformed `coverage` attribute input
  --> $DIR/bad-attr-ice.rs:11:1
   |
LL | #[coverage]
   | ^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL - #[coverage]
LL + #[coverage(off)]
   |
LL - #[coverage]
LL + #[coverage(on)]
   |

error: aborting due to 1 previous error

